tests/patching/errors/find_pattern_empty.dby
import std.buffer as buf
let b = buf.new(1)
buf.find(b, b"")
